sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:16: error: not found: value j
      j = getNombreValeurs - 2 - i - index
      ^AlgCocktailSort1:17: error: not found: value j
      if(getValeur(j) > getValeur(j - 1)){
                   ^AlgCocktailSort1:17: error: not found: value j
      if(getValeur(j) > getValeur(j - 1)){
                                  ^AlgCocktailSort1:18: error: not found: value j
        echange(j,j - 1);
                ^AlgCocktailSort1:18: error: not found: value j
        echange(j,j - 1);
                  ^